# Embedded_Linux_system

./: README.md
Embedded_system_controller/: CMakeLists.txt  Makefile  ai_log.md  build.sh  sensor_feed.csv
Embedded_system_controller/actuator/: actuator.h  buzzer_actuator.c  led_actuator.c
Embedded_system_controller/controller/: ctl.c
Embedded_system_controller/sensor/: main.c  sensor.c  sensor.h
Final_Project/: Hardware_diagram.excalidraw
Linux_service_sensor/: Makefile  README.md  assignment-sensor
Linux_service_sensor/ai/: prompt-log.md  provenance.json  reflection.md
Linux_service_sensor/src/: config.c  config.h  logger.c  logger.h  main.c  sensor.c  sensor.h  signal_handler.c  signal_handler.h
Linux_service_sensor/systemd/: assignment-sensor.service
Linux_service_sensor/test/: test.md
